# open-plugins

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
core/open_plugins/: __init__.py  registry.py  validator.py
